# Ashta-Chamma

./: .gitignore  CLAUDE.md  README.md
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx
docs/: README.md
infra/: README.md
server/: .gitignore  README.md  pyproject.toml
server/app/: __init__.py
server/tests/: test_app_init.py
